# videre_stereo_cam

./: CMakeLists.txt  README.MD  README.md  mainpage.dox  package.xml
cfg/: VidereStereoCam.cfg
include/videre_stereo_cam/: stereoimage.h  videre_dc1394_control.h  videre_stereo_1394.h
launch/: image_proc_only.launch  videre.launch  videre_image_proc.launch  videre_left_mono_image_proc.launch  videre_mono_image_proc.launch  videre_non_stoc.launch  videre_params_non_stoc.launch  videre_right_mono_image_proc.launch
src/: disparity_view.cpp  videre_stereo_node.cpp
src/videre_stereo_cam/: stereoimage.cpp  videre_stereo_1394.cpp
